--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "starter-repo",
   "version": "0.0.1",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "export": "next export",
     "start": "next start",
     "lint": "next lint",
-    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json}\"",
+    "pretty": "prettier --write \"./**/*.{js,jsx,ts,tsx,json,yaml,yml}\"",
     "format": "npm run pretty && npm run lint"
   },
   "dependencies": {
@@ -16,6 +17,7 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "js-yaml": "^4.1.0",
     "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
