--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,8 @@
     "baseUrl": ".",
     "paths": {
       "@types/*": ["types/*"],
-      "@store": ["store/index.ts"]
+      "@store": ["store/store.ts"],
+      "@theme": ["theme/theme.ts"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
