--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@emotion/styled": "^11.10.5",
     "@mui/icons-material": "^5.10.14",
     "@mui/material": "^5.10.14",
+    "@reduxjs/toolkit": "^1.9.1",
     "js-yaml": "^4.1.0",
     "next": "^13.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.5",
     "swr": "^1.3.0"
   },
   "devDependencies": {
